--- a/code.html
+++ b/code.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>RACECAR</title>
+    <title>LOAN SHARK</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -33,7 +33,7 @@
 <!-- === NAV SECTION === -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" target="_blank" href="https://sammynava.com"><img src="img/fullColorMark_adobe_express.svg" height="50"></a>&nbsp;<a class="navbar-brand"  href="/index.html">RACECAR</a>
+        <a class="navbar-brand" target="_blank" href="https://sammynava.com"><img src="img/fullColorMark_adobe_express.svg" height="50"></a>&nbsp;<a class="navbar-brand"  href="/index.html">LOAN SHARK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="/code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://github.com/RedAngelRedux/RaceCar.git">Git Repot</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/RedAngelRedux/LoanShark.git">Git Repot</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://sammynava.com">About</a>
@@ -64,7 +64,7 @@
 <main class="flex-shrink-0">
 <!-- "flex-shrink-0" in the main tag is also necessary to ensure a sticky footer -->    
     <div class="container py-5 px-5 mt-5">
-        <h2 class="border-1 border-bottom border-dark">The Code for FIZZ BUZZ</h2>
+        <h2 class="border-1 border-bottom border-dark">The Code for Loan Shark</h2>
         <idv class="row row-cols-1">
             <!-- === CODE EMBED ===-->
             <div>
