--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>RACECAR - Thunder in the Palindrome</title>
+    <title>LOAN SHARK</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -32,7 +32,7 @@
 <!-- === NAV SECTION === -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" target="_blank" href="https://sammynava.com"><img src="img/fullColorMark_adobe_express.svg" height="50"></a>&nbsp;<a class="navbar-brand"  href="/index.html">RACECAR</a>
+        <a class="navbar-brand" target="_blank" href="https://sammynava.com"><img src="img/fullColorMark_adobe_express.svg" height="50"></a>&nbsp;<a class="navbar-brand"  href="/index.html">LOAN SHARK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="/code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://github.com/RedAngelRedux/RaceCar.git">Git Repot</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/RedAngelRedux/LoanShark.git">Git Repot</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://sammynava.com">About</a>
@@ -65,12 +65,12 @@
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
             <div class="col order-last order-lg-first">
-                <h1 class="display-5 fw-bold lh-1 mb-3">Thunder in the Palindrome!!!!</h1>
+                <h1 class="display-5 fw-bold lh-1 mb-3">Don't Get Bit By Your Loan!</h1>
                 <h4 class="lead">
-                    <strong>RACERS, START YOUR ENGINES...3, 2, 1</strong>
-                    <p>A javascript coding exercise to solve and present the question, "Is it a palindrome?"</p>
-                    <p>So, what is a palindrome?</p>
-                    <strong>Palindrome:</strong> is a word, phrase, or sequence that reads the same backwards as forward, e.g, <strong>racecar</strong>
+                    <strong>know exactly what you are diving into before taking the plunge</strong>
+                    <p></p>
+                    <p>Use our free loan calculator to create your amortization schedule to see exactly how much your loan will realy cost. </p> 
+                    <p>Experiment with different terms to find the best balance for your budget.</p>
                 </h4>
                 <ul CLASS="fa-ul pt-2 checklist">
                     <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -100,7 +100,7 @@
                 </h5>
             </div>
             <div class="col">
-                <img src="/img/app-logos.svg" class="img-fluid center-block d-block mx-auto" alt="Racecar Logo" width="300">
+                <img src="/img/app-logos.svg" class="img-fluid center-block d-block mx-auto" alt="Racecar Logo" width="100%">
             </div>
         </div>
     </div>
