--- a/app.html
+++ b/app.html
@@ -63,32 +63,47 @@
 <main class="flex-shrink-0">
     <div class="container mt-5">
         <div class="row">
-            <div class="col-12 display-6 fw-bold"><h3><span class="d-none d-md-inline">Loan&nbsp;</span><spa class="d-sm-inline">Calculator</spa<</h3></div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 display-6 fw-bold"><h3><span class="d-none d-sm-inline">Loan&nbsp;</span><spa class="d-sm-inline">Calculator</spa<</h3></div>
+            <div class="col-12 col-md-3 border border-2">
                 <form class="row">
                     <div class="col-12">
-                        <label type="label" class="form-label" for="loanAmount"><span class="d-none d-sm-inline">Loan</span><spa class="d-md-inline">&nbsp;Amount</spa</label>
+                        <label type="label" class="form-label" for="loanAmount"><span class="d-none d-sm-inline">Loan</span><spa class="d-sm-inline">&nbsp;Amount</spa</label>
                         <input type="number" class="form-control" id="loanAmount" name="loanAmount" placeholder="100000" value="100000" aria-label="Loan Amount">
                     </div>
                     <div class="col-12">
-                        <label type="label" class="form-label" for="monthlyPayments"><span class="d-none d-sm-inline">Payment</span><spa class="d-md-inline">&nbsp;Months</spa<</label>
+                        <label type="label" class="form-label" for="monthlyPayments"><span class="d-none d-sm-inline">Payment</span><spa class="d-sm-inline">&nbsp;Months</spa<</label>
                         <input type="number" class="form-control" id="mmonthlyPayments" name="mmonthlyPayments" placeholder="360" value="360" aria-label="Monthly Payments">
                     </div>
                     <div class="col-12">
-                        <label type="label" class="form-label" for="interestRate"><span class="d-none d-sm-inline">Interest</span><spa class="d-md-inline">&nbsp;Rate</spa<</label>
+                        <label type="label" class="form-label" for="interestRate"><span class="d-none d-sm-inline">Interest</span><spa class="d-sm-inline">&nbsp;Rate</spa<</label>
                         <input type="number" class="form-control" id="interestRate" name="interestRate" placeholder="5" value="5" aria-label="Interest Rate">
                     </div>
                     <div class="col-12 d-flex justify-content-startr mb-3">
                         <button type="button" id="btnSubmit" class="btn btn-warning mt-2">Submit</button>
-                    </div>
+                    </div>    
                 </form>
             </div>
-            <div class="col-12 col-md-6 border-start border-end border-2">                    
-                <form class="row">
-                </form>         
-                <div id="resultsDiv" class="border">
-                    <!-- === Either alertTemplate or tableTemplate Goes Here-->
-                </div>
+            <div class="col-12 col-md-9">   
+                <div class="row display-6 fw-bold justify-content-center">Your Monthly Payments</div>
+                <div class="row mt-5 display-4 fw-bolder justify-content-center">$471.78</div>
+                <div class="row mt-5">
+                    <div class="input-group">
+                        <div class="col-4">&nbsp;</div>
+                        <div class="col-3 fw-bold">Total Principal</div>
+                        <div class="col-3 fw-bold">$100,000</div>
+                        <div class="col-2">&nbsp;</div>
+                        <div class="col-4">&nbsp;</div>
+                        <div class="col-3 fw-bold">Total Interest</div>
+                        <div class="col-3 fw-bold">$10,000</div>
+                        <div class="col-2">&nbsp;</div>
+                        <div class="col-4">&nbsp;</div>
+                        <div class="col-3 fw-b0ld fw-bold">Total Cost</div>
+                        <div class="col-3 fw-bold fw-bold">$110,000</div>    
+                    </div>
+                </div>                
+            </div>
+            <div class="col-12" id="resultsDiv">
+                <!-- === Either alertTemplate or tableTemplate Goes Here-->
             </div>
         </div>
     </div>
