--- a/app.html
+++ b/app.html
@@ -119,19 +119,19 @@
 
 <template id="summaryTemplate">
     <div class="row display-6 fw-bold justify-content-center">Your Monthly Payments</div>
-    <div class="row mt-5 display-4 fw-bolder justify-content-center"><p>$471.78</p></div>
+    <div class="row mt-5 display-4 fw-bolder justify-content-center">$471.78</div>
     <div class="row mt-5">                    
         <div class="col-4">&nbsp;</div>
         <div class="col-3 fw-bold">Total Principal</div>
-        <div class="col-3 fw-bold"><p>$100,000</p></div>
+        <div class="col-3 fw-bold">$100,000</div>
         <div class="col-2">&nbsp;</div>
         <div class="col-4">&nbsp;</div>
         <div class="col-3 fw-bold">Total Interest</div>
-        <div class="col-3 fw-bold"><p>$10,000</p></div>
+        <div class="col-3 fw-bold">$10,000</div>
         <div class="col-2">&nbsp;</div>
         <div class="col-4">&nbsp;</div>
         <div class="col-3 fw-bold">Total Cost</div>
-        <div class="col-3 fw-bold"><p>$110,000</p></div>
+        <div class="col-3 fw-bold">$110,000</div>
     </div>                
 </template>
 
