Display & Debug Schedule
Displayed the amortization schedule using in-memory pmtDetails array (fields.schedule).  Also, fixed errors preventing proper display and values.  Encountered an interesting issue where a variable initialized as a number (0.00, mysteriously converted into a string the second time into the loop.  Why unresolbed?

--- a/app.html
+++ b/app.html
@@ -148,7 +148,12 @@
 <template id="tableTemplate">
     <table class="table table-bordered border-dark table-striped table-sm" id="tableFizzBuzz">
         <thead>
-            <td colspan="5">Results</td>
+            <td>Month</td>
+            <td>Payment</td>
+            <td>Principal</td>
+            <td>Interest</td>
+            <td>Total Interest</td>
+            <td>Balance</td>
         </thead>
         <tbody id="tbodyFizzBuzz" class="fizzbuzz">
             <!-- === INSERT ROWS HERE ===-->
